fix: forbid to wrap the line

--- a/index.css
+++ b/index.css
@@ -1,44 +1,50 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   background: #222222;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
-p{
+p {
   color: wheat;
   font-size: 70px;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-weight: bold;
 
   -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -khtml-user-select: none;    /* Konqueror */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
-  user-select: none;           /* Non-prefixed version, currently
+  -webkit-user-select: none; /* Chrome/Safari/Opera */
+  -khtml-user-select: none; /* Konqueror */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   not supported by any browser */
   position: relative;
+  white-space: nowrap;
 }
 
-p::before{
+p::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 110%;
   right: 0;
 
-  background: linear-gradient(90deg, rgba(34,34,34,0), rgba(34,34,34,1) 80%);
+  background: linear-gradient(
+    90deg,
+    rgba(34, 34, 34, 0),
+    rgba(34, 34, 34, 1) 80%
+  );
 }
 
-p::after{
+p::after {
   content: "https://www.youtube.com/watch?v=F8sza6q-L1Q";
   align-self: start;
   animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
